# TB-23-24

./: README.md
Implementation/boringtun/boringtun/: Cargo.toml
Implementation/boringtun/boringtun-cli/src/: main.rs
Implementation/boringtun/boringtun/src/: lib.rs  smartcard.rs
Implementation/boringtun/boringtun/src/device/: mod.rs
Implementation/boringtun/boringtun/src/noise/: handshake.rs  mod.rs
Implementation/io_uring_poc/: 1-io_normal_no_async.rs  2-io_normal_async.rs  3-uring_no_async.rs  4-uring_async.rs  uring_poc_testing.sh
Implementation/openpgp_sc_poc/: Cargo.toml
Implementation/openpgp_sc_poc/src/: main.rs
Implementation/x25519-dalek/src/: x25519.rs
