[package]
name = "openpgp_sc_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
card-backend-pcsc = "=0.5.0"
anyhow = "1.0.82"
rand_core = "0.6.4"
rand = "0.8.5"
x25519-dalek = { version="2.0.1" , features = ["static_secrets"] }
openpgp-card = "0.4.2"
hex = "0.4.3"
base64 = "0.22.1"
hex-slice = "0.1.4"
serde_json = "1.0.117"
